--- a/Matchismo/en.lproj/MainStoryboard.storyboard
+++ b/Matchismo/en.lproj/MainStoryboard.storyboard
@@ -136,19 +136,12 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Score: 0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nbq-qM-mca">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="94" id="7oq-JJ-6an"/>
-                                </constraints>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" text="Score: 0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nbq-qM-mca">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Last Action" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="128" translatesAutoresizingMaskIntoConstraints="NO" id="bFo-rM-nAr">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="23" id="0fv-y3-3Su"/>
-                                    <constraint firstAttribute="width" constant="128" id="ucO-2M-UF8"/>
-                                </constraints>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Last Action" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="147" translatesAutoresizingMaskIntoConstraints="NO" id="bFo-rM-nAr">
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -169,10 +162,6 @@
                             <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Twf-Kb-KZI">
                                 <color key="backgroundColor" red="0.052062960659999998" green="0.62877887229999996" blue="0.19581195809999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <gestureRecognizers/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="329" id="7j8-wv-pQb"/>
-                                    <constraint firstAttribute="height" constant="315" id="Ful-2L-mpZ"/>
-                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="LlD-5i-bGm">
                                     <size key="itemSize" width="65" height="65"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -228,21 +217,24 @@
                         </subviews>
                         <color key="backgroundColor" red="0.5042459239" green="0.4949764783883826" blue="0.45777150045797355" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="uJs-N0-laV" secondAttribute="trailing" constant="95" id="5Cb-fF-5V3"/>
-                            <constraint firstItem="Twf-Kb-KZI" firstAttribute="top" secondItem="viD-aT-aYt" secondAttribute="top" type="default" id="5q6-s6-4BY"/>
-                            <constraint firstItem="lzk-U6-Sqm" firstAttribute="baseline" secondItem="uJs-N0-laV" secondAttribute="baseline" type="default" id="EYx-YY-2mB"/>
-                            <constraint firstAttribute="bottom" secondItem="uJs-N0-laV" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="GQE-t1-ht1"/>
+                            <constraint firstItem="Nbq-qM-mca" firstAttribute="leading" secondItem="bFo-rM-nAr" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="4B0-s1-fFG"/>
+                            <constraint firstItem="Twf-Kb-KZI" firstAttribute="top" secondItem="viD-aT-aYt" secondAttribute="top" type="user" id="5q6-s6-4BY"/>
                             <constraint firstAttribute="trailing" secondItem="lzk-U6-Sqm" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="KPU-Df-wut"/>
-                            <constraint firstAttribute="bottom" secondItem="7Fm-Oc-kX3" secondAttribute="bottom" constant="21" id="Nye-XO-k8f"/>
-                            <constraint firstItem="lzk-U6-Sqm" firstAttribute="top" secondItem="Nbq-qM-mca" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="ZGL-pN-2h8"/>
-                            <constraint firstItem="7Fm-Oc-kX3" firstAttribute="top" secondItem="viD-aT-aYt" secondAttribute="top" constant="350" id="Zxe-iH-VgI"/>
-                            <constraint firstItem="Twf-Kb-KZI" firstAttribute="leading" secondItem="viD-aT-aYt" secondAttribute="leading" type="default" id="gPD-hb-OjQ"/>
-                            <constraint firstItem="Nbq-qM-mca" firstAttribute="baseline" secondItem="bFo-rM-nAr" secondAttribute="baseline" type="default" id="hUH-st-Vak"/>
-                            <constraint firstItem="7Fm-Oc-kX3" firstAttribute="leading" secondItem="viD-aT-aYt" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="k8k-6Y-B4w"/>
-                            <constraint firstAttribute="trailing" secondItem="7Fm-Oc-kX3" secondAttribute="trailing" constant="180" id="rG7-7b-XXg"/>
-                            <constraint firstAttribute="bottom" secondItem="lzk-U6-Sqm" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="roR-hD-Fjo"/>
-                            <constraint firstItem="bFo-rM-nAr" firstAttribute="leading" secondItem="viD-aT-aYt" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="t9H-kF-fU2"/>
-                            <constraint firstItem="Nbq-qM-mca" firstAttribute="trailing" secondItem="viD-aT-aYt" secondAttribute="trailing" type="default" id="yRr-d3-4Oo"/>
+                            <constraint firstItem="Twf-Kb-KZI" firstAttribute="trailing" secondItem="viD-aT-aYt" secondAttribute="trailing" type="user" id="LpE-M2-CmE"/>
+                            <constraint firstItem="7Fm-Oc-kX3" firstAttribute="top" secondItem="bFo-rM-nAr" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="SHl-OX-1RO"/>
+                            <constraint firstItem="lzk-U6-Sqm" firstAttribute="baseline" secondItem="uJs-N0-laV" secondAttribute="baseline" type="user" id="Ve9-2z-S8s"/>
+                            <constraint firstItem="Nbq-qM-mca" firstAttribute="leading" secondItem="uJs-N0-laV" secondAttribute="leading" type="default" id="VhU-Hj-1Xi"/>
+                            <constraint firstItem="bFo-rM-nAr" firstAttribute="top" secondItem="Twf-Kb-KZI" secondAttribute="bottom" constant="15" type="user" id="WEr-Qt-qxy"/>
+                            <constraint firstItem="lzk-U6-Sqm" firstAttribute="top" secondItem="Nbq-qM-mca" secondAttribute="bottom" constant="8" symbolic="YES" type="user" id="YDm-qG-bVC"/>
+                            <constraint firstItem="uJs-N0-laV" firstAttribute="leading" secondItem="7Fm-Oc-kX3" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="d1z-CK-jGw"/>
+                            <constraint firstItem="bFo-rM-nAr" firstAttribute="centerY" secondItem="Nbq-qM-mca" secondAttribute="centerY" type="user" id="gk3-Mh-78M"/>
+                            <constraint firstAttribute="trailing" secondItem="Nbq-qM-mca" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="gmL-R3-3er"/>
+                            <constraint firstItem="lzk-U6-Sqm" firstAttribute="leading" secondItem="uJs-N0-laV" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="hwf-YD-ab1"/>
+                            <constraint firstItem="Twf-Kb-KZI" firstAttribute="leading" secondItem="viD-aT-aYt" secondAttribute="leading" type="user" id="i5h-4n-RPg"/>
+                            <constraint firstAttribute="bottom" secondItem="uJs-N0-laV" secondAttribute="bottom" constant="20" symbolic="YES" type="user" id="lXF-5E-951"/>
+                            <constraint firstAttribute="bottom" secondItem="7Fm-Oc-kX3" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="nyn-I2-H8h"/>
+                            <constraint firstItem="bFo-rM-nAr" firstAttribute="leading" secondItem="viD-aT-aYt" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="ops-Nz-57z"/>
+                            <constraint firstItem="7Fm-Oc-kX3" firstAttribute="leading" secondItem="bFo-rM-nAr" secondAttribute="leading" type="user" id="r6X-Q1-VzY"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Set" image="setcards.png" id="JiL-kG-roz"/>
@@ -271,17 +263,14 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y3k-aM-I3l">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y3k-aM-I3l">
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="330" id="pFq-mg-lrm"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hoh-h4-Pim">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="85" id="5Fg-U0-OVI"/>
+                                    <constraint firstAttribute="width" constant="95" id="NDd-rB-URf"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="By Date">
@@ -296,9 +285,6 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DVV-JD-jzC">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="78" id="0cX-23-wzb"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="By Score">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -313,7 +299,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ioS-z6-iVJ">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="104" id="Pds-Vq-lyH"/>
+                                    <constraint firstAttribute="width" constant="101" id="bd9-3v-q9k"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="By Duration">
@@ -330,18 +316,19 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="DVV-JD-jzC" firstAttribute="baseline" secondItem="ioS-z6-iVJ" secondAttribute="baseline" type="default" id="16H-ae-1rC"/>
-                            <constraint firstItem="ioS-z6-iVJ" firstAttribute="leading" secondItem="DVV-JD-jzC" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="3ag-MQ-k0H"/>
-                            <constraint firstItem="Hoh-h4-Pim" firstAttribute="baseline" secondItem="ioS-z6-iVJ" secondAttribute="baseline" type="default" id="5e0-25-Qcd"/>
-                            <constraint firstAttribute="trailing" secondItem="ioS-z6-iVJ" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="7gV-UE-6KD"/>
+                            <constraint firstItem="Hoh-h4-Pim" firstAttribute="baseline" secondItem="DVV-JD-jzC" secondAttribute="baseline" type="user" id="7ms-2h-FpO"/>
+                            <constraint firstItem="y3k-aM-I3l" firstAttribute="centerX" secondItem="DVV-JD-jzC" secondAttribute="centerX" type="user" id="9az-RM-SWx"/>
+                            <constraint firstItem="Hoh-h4-Pim" firstAttribute="baseline" secondItem="ioS-z6-iVJ" secondAttribute="baseline" type="user" id="9nJ-N5-pMn"/>
+                            <constraint firstAttribute="bottom" secondItem="DVV-JD-jzC" secondAttribute="bottom" constant="13" type="user" id="Cy9-ql-Bko"/>
                             <constraint firstItem="y3k-aM-I3l" firstAttribute="leading" secondItem="5eM-7M-yT6" secondAttribute="leading" type="default" id="Op4-sG-L8z"/>
-                            <constraint firstItem="y3k-aM-I3l" firstAttribute="top" secondItem="5eM-7M-yT6" secondAttribute="top" type="default" id="Q4e-SU-H3J"/>
-                            <constraint firstAttribute="bottom" secondItem="DVV-JD-jzC" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="SeW-nt-GcG"/>
-                            <constraint firstItem="DVV-JD-jzC" firstAttribute="baseline" secondItem="Hoh-h4-Pim" secondAttribute="baseline" type="default" id="V49-xR-drV"/>
-                            <constraint firstAttribute="bottom" secondItem="Hoh-h4-Pim" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="iJm-on-sWk"/>
+                            <constraint firstItem="y3k-aM-I3l" firstAttribute="top" secondItem="5eM-7M-yT6" secondAttribute="top" type="user" id="Q4e-SU-H3J"/>
+                            <constraint firstItem="ioS-z6-iVJ" firstAttribute="leading" secondItem="DVV-JD-jzC" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Sfq-In-XFN"/>
+                            <constraint firstItem="Hoh-h4-Pim" firstAttribute="top" secondItem="y3k-aM-I3l" secondAttribute="bottom" constant="8" symbolic="YES" type="user" id="UQx-zE-faa"/>
+                            <constraint firstItem="Hoh-h4-Pim" firstAttribute="centerY" secondItem="ioS-z6-iVJ" secondAttribute="centerY" type="user" id="XcL-kc-eZy"/>
                             <constraint firstItem="y3k-aM-I3l" firstAttribute="trailing" secondItem="5eM-7M-yT6" secondAttribute="trailing" type="default" id="oat-Pw-92p"/>
-                            <constraint firstItem="DVV-JD-jzC" firstAttribute="leading" secondItem="Hoh-h4-Pim" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="pDM-JB-iOf"/>
-                            <constraint firstAttribute="bottom" secondItem="ioS-z6-iVJ" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="r9D-uL-e1B"/>
+                            <constraint firstItem="DVV-JD-jzC" firstAttribute="leading" secondItem="Hoh-h4-Pim" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="ruF-FK-yIq"/>
+                            <constraint firstItem="ioS-z6-iVJ" firstAttribute="baseline" secondItem="DVV-JD-jzC" secondAttribute="baseline" type="user" id="sS5-JJ-tmY"/>
+                            <constraint firstItem="Hoh-h4-Pim" firstAttribute="centerY" secondItem="DVV-JD-jzC" secondAttribute="centerY" type="user" id="zHL-x7-kxk"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Scores" image="scores.png" id="j2a-tS-ewi"/>
